tests/type-errors/no_pkey_assignment_in_update.arl
archetype no_pkey_assignment_in_update

asset myasset {
  id : string;
}

action exec (k : string) {
  effect {
    myasset.update(k, {id = "key"})
  }
}
